[tool.poetry]
name = "sqlalchemy-copy"
version = "0.1.0"
description = "Copy data between any databases supported by SQLAlchemy"
authors = ["Remi Rampin <remi@rampin.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqlalchemy_copy"}]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = {version = "*", optional = true}
SQLAlchemy = ">=1.3,<1.5"
sqlalchemy-cockroachdb = {version = "*", optional = true}

[tool.poetry.extras]
postgres = [
    "psycopg2",
]
cockroachdb = [
    "psycopg2",
    "sqlalchemy-cockroachdb",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
